# ChangeLog for www-client/opera-next
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.19 2011/06/20 20:01:25 jer Exp $

*opera-next-11.50.1049 (20 Jun 2011)

  20 Jun 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1049.ebuild:
  http://my.opera.com/desktopteam/blog/2011/06/20/presto-2-9

*opera-next-11.50.1040 (14 Jun 2011)

  14 Jun 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1040.ebuild:
  http://my.opera.com/desktopteam/blog/2011/06/14/happy-tuesday

*opera-next-11.50.1037 (09 Jun 2011)

  09 Jun 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1037.ebuild:
  http://my.opera.com/desktopteam/blog/2011/06/09/re-speed-dial

*opera-next-11.50.1036 (09 Jun 2011)

  09 Jun 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1036.ebuild:
  http://my.opera.com/desktopteam/blog/2011/06/09/opera-dragonfly-fix

*opera-next-11.50.1035 (06 Jun 2011)

  06 Jun 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1035.ebuild:
  http://my.opera.com/desktopteam/blog/2011/06/06/post-search-and-platform-fixe
  s

  04 Jun 2011; Jeroen Roovers <jer@gentoo.org> opera-next-11.50.1031.ebuild:
  Add a simple linguas counter.

*opera-next-11.50.1031 (01 Jun 2011)

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1031.ebuild:
  http://my.opera.com/desktopteam/blog/2011/06/01/a-couple-of-improvements-sinc
  e-the-beta

  31 May 2011; Jeroen Roovers <jer@gentoo.org> opera-next-11.50.1027.ebuild:
  Changed "opera" to "PN" in a comment.

*opera-next-11.50.1027 (30 May 2011)

  30 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1027.ebuild:
  http://my.opera.com/desktopteam/blog/2011/05/30/fixed-some-annoying-crashers

*opera-next-11.50.1024 (30 May 2011)

  30 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1024.ebuild:
  http://my.opera.com/desktopteam/blog/2011/05/29/sunday-special

*opera-next-11.50.1020 (28 May 2011)
