@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.19 2011/06/20 20:01:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.20 2011/06/21 16:35:03 jer Exp $
+
+*opera-next-11.50.1052 (21 Jun 2011)
+
+  21 Jun 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1052.ebuild:
+  http://my.opera.com/desktopteam/blog/2011/06/21/another-happy-tuesday
 
 *opera-next-11.50.1049 (20 Jun 2011)
 
